--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
     "file-loader": "^6.2.0",
+    "html-loader": "^5.0.0",
     "html-webpack-plugin": "^5.6.0",
     "image-webpack-loader": "^8.1.0",
     "mini-css-extract-plugin": "^2.8.0",
